--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#337ab7</color>
     <color name="colorAccent">#337ab7</color>
     <color name="textcolor">#000000</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
