--- a/app/src/main/res/layout/activity_org.xml
+++ b/app/src/main/res/layout/activity_org.xml
@@ -1,11 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
     <include
         android:id="@+id/tool_bar"
-        layout="@layout/tool_bar">
+        layout="@layout/tool_bar"
+        style="@style/BB_BottomBarBadge_Text">
     </include>
 
     <TextView
@@ -49,13 +51,13 @@
             android:layout_marginRight="10dp">
 
             <TextView
-                android:layout_width="5dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:id="@+id/org_id"
                 android:visibility="gone"
                 android:layout_marginLeft="10dp"
-                android:text="Organization :"
+                android:text="Nilesh"
                 android:textSize="18sp"
                 android:textColor="@color/textcolor"
                 android:layout_marginBottom="5dp"/>
@@ -89,16 +91,17 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp" />
     </android.support.design.widget.TextInputLayout>
+
     <Button
         android:id="@+id/buttonLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorAccent"
         android:textColor="@android:color/white"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:clickable="true"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="10dp"
         android:padding="12dp"
         android:text="Login"
         android:layout_marginLeft="20dp"
