--- a/app/src/main/res/layout/eracord_header.xml
+++ b/app/src/main/res/layout/eracord_header.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="178dp"
-    android:background="#80337ab7"
+    android:background="@color/colorAccent"
     android:orientation="vertical"
     android:weightSum="1">
 
@@ -14,20 +14,22 @@
         android:orientation="vertical"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:background="@color/colorAccent">
 
         <TextView
             android:id="@+id/email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
+            android:textColor="@color/colorWhite"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="5dp"
             android:text="abc@gmail.com"
-            android:textSize="14sp"
+            android:textSize="18sp"
             android:textStyle="bold"
 
-            />
+            android:textAllCaps="true"
+            android:textAlignment="textStart" />
     </LinearLayout>
 
     <ImageView
