--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#80337ab7"
+    android:background="@color/colorAccent"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:elevation="4dp">
 
