--- a/app/src/main/res/layout/class_item.xml
+++ b/app/src/main/res/layout/class_item.xml
@@ -17,26 +17,20 @@
 
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="62dp"
-            android:showDividers="end"
-            android:divider="@drawable/divider">
-
-        </LinearLayout>
-
-        <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="80dp"
+            android:divider="@drawable/divider"
+            android:showDividers="beginning|middle|end"
+            android:elevation="2dp">
 
             <ImageView
                 android:id="@+id/imageView"
                 android:tag="image_tag"
-                android:layout_height="45dp"
+                android:layout_height="65dp"
                 android:src="@drawable/class_circle"
                 android:layout_weight="0.15"
-                android:layout_width="60dp"
+                android:layout_width="80dp"
                 android:layout_marginTop="8dp"
                 android:elevation="1dp"
                 android:layout_marginLeft="20dp"
@@ -53,13 +47,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:textStyle="bold"
                     android:textColor="@color/colorAccent"
                     android:text="SubjectName"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:layout_marginLeft="10dp"
-                    android:textSize="14sp"
+                    android:textSize="18sp"
                     android:paddingTop="5dp"
                     android:fontFamily="sans-serif"
                     android:textAllCaps="false" />
@@ -72,11 +65,18 @@
                     android:textColor="@color/bb_inActiveBottomBarItemColor"
                     android:text="ClassName"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:layout_marginLeft="10dp"
-                    android:paddingBottom="9dp"
                     android:paddingRight="10dp"
-                    android:textSize="12sp"
+                    android:textSize="14sp"
+                    android:layout_marginTop="2dp"
+                    android:textAlignment="textStart" />
+
+                <TextView
+                    android:text="Division"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/division"
                     android:layout_marginTop="2dp" />
+
                 <TextView
                     android:id="@+id/textViewid"
                     android:layout_width="wrap_content"
@@ -90,7 +90,15 @@
 
 
             </LinearLayout>
+
         </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/textView3"
+            android:background="@drawable/divider"
+            android:textSize="24sp" />
 
     </android.support.v7.widget.CardView>
 
