--- a/app/src/main/res/layout/daily_fill_catalog.xml
+++ b/app/src/main/res/layout/daily_fill_catalog.xml
@@ -49,7 +49,7 @@
 
             <Button
                 android:id="@+id/loadmore"
-                android:layout_width="150dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:background="@drawable/button_shape"
