--- a/app/src/main/res/layout/eracord_header.xml
+++ b/app/src/main/res/layout/eracord_header.xml
@@ -35,9 +35,13 @@
     <ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:src="@drawable/ic_photos"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="38dp"
+        android:src="@android:drawable/sym_def_app_icon"
+        android:layout_marginLeft="40dp"
         android:id="@+id/circleView"
-        />
+        android:scaleType="centerCrop"
+        android:layout_marginBottom="20dp"
+        android:layout_above="@+id/linearLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="40dp" />
 </RelativeLayout>
