--- a/app/src/main/res/layout/student_catalog.xml
+++ b/app/src/main/res/layout/student_catalog.xml
@@ -3,7 +3,8 @@
     android:id="@+id/DrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:elevation="7dp">
+    android:elevation="7dp"
+    android:background="@color/colorWhite">
 
     <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/scrollView"
@@ -16,51 +17,43 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <include
                 android:id="@+id/tool_bar"
-                layout="@layout/tool_bar"></include>
+                layout="@layout/tool_bar"
+                android:layout_weight="1"
+                android:layout_width="match_parent"></include>
 
-            <TextView
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:text="Students"
-                android:textColor="#000000"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <RelativeLayout
-                android:id="@+id/header"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="30dp"
-                android:descendantFocusability="beforeDescendants"
-                android:focusableInTouchMode="true"
-                android:gravity="center">
+                android:layout_height="45dp"
+                android:layout_marginBottom="5dp"
+                android:background="@color/colorWhite"
+                android:animateLayoutChanges="false">
 
                 <EditText
                     android:id="@+id/search"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginTop="5dp"
-                    android:hint="Search here"
+                    android:hint="Search by class"
                     android:textColor="#000"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:layout_weight="1"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:paddingTop="10dp"
+                    android:background="@color/colorWhite" />
 
-            </RelativeLayout>
+            </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/my_recycler_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp" />
+                android:layout_height="415dp"
+                android:layout_weight="3.33" />
 
             <TextView
                 android:id="@+id/nodata"
@@ -76,16 +69,18 @@
 
             <Button
                 android:id="@+id/loadmore"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="5dp"
-                android:background="@drawable/button_shape"
                 android:gravity="center"
-                android:text="Load More"
-                android:textColor="#000"
-                android:textSize="20sp"
-                android:visibility="gone" />
+                android:text="Load more"
+                android:textColor="@color/colorWhite"
+                android:textSize="18sp"
+                android:visibility="visible"
+                android:textStyle="normal|bold"
+                android:textAlignment="center"
+                android:background="@color/colorAccent"
+                android:textAllCaps="false" />
 
 
         </LinearLayout>
