--- a/app/src/main/res/layout/student_catalog_item.xml
+++ b/app/src/main/res/layout/student_catalog_item.xml
@@ -1,100 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:tag="cards main container">
 
-<!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:orientation="horizontal"-->
-    <!--card_view:cardCornerRadius="5dp"-->
-    <!--card_view:cardUseCompatPadding="true">-->
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/linearLayout2"
-        android:layout_width="fill_parent"
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        card_view:cardBackgroundColor="#ffffff"
+        card_view:cardElevation="0dp">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/textcolor"
-                android:text="Student Name    "
-                android:textSize="15dp" />
-
-            <TextView
-                android:id="@+id/stud_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="hiii"
-                android:textColor="@color/textcolor"
-                android:textSize="15dp" />
-        </LinearLayout>
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Class Name  "
-                android:textColor="@color/textcolor"
-            android:textSize="15dp" />
-            <TextView
-                android:id="@+id/stud_class"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="hiii"
-                android:textColor="@color/textcolor"
-                android:textSize="15dp" />
-        </LinearLayout>
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="5dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/textcolor"
-                android:text="Hostel Allocation  "
-                android:textSize="15dp" />
-            <TextView
-                android:id="@+id/stud_hostel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="hiii"
-                android:textColor="@color/textcolor"
-                android:textSize="15dp" />
-        </LinearLayout>
-
-        <View
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:background="#000000"/>
+            android:layout_height="80dp"
+            android:divider="@drawable/divider"
+            android:showDividers="beginning|middle|end"
+            android:elevation="2dp">
 
-    </LinearLayout>
-<!--</android.support.v7.widget.CardView>-->
+            <ImageView
+                android:id="@+id/imageView"
+                android:tag="image_tag"
+                android:layout_height="55dp"
+                android:src="@drawable/student"
+                android:layout_weight="0.15"
+                android:layout_width="80dp"
+                android:layout_marginTop="10dp"
+                android:elevation="1dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/stud_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorAccent"
+                    android:text="StudentName"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="14sp"
+                    android:paddingTop="5dp"
+                    android:fontFamily="sans-serif"
+                    android:textAllCaps="false" />
+
+                <TextView
+                    android:id="@+id/stud_class"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/bb_inActiveBottomBarItemColor"
+                    android:text="ClassName"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:paddingRight="10dp"
+                    android:textSize="14sp"
+                    android:layout_marginTop="2dp"
+                    android:textAlignment="textStart" />
+
+                <TextView
+                    android:text="Hostel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/stud_hostel"
+                    android:layout_marginTop="2dp" />
+
+                <TextView
+                    android:id="@+id/textViewid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:visibility="gone"
+                    android:textColor="@color/textcolor"
+                    android:layout_marginTop="10dp"
+                    android:text="id"
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/textView3"
+            android:background="@drawable/divider"
+            android:textSize="24sp" />
+
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
