--- a/app/src/main/res/layout/activity_daily_teaching.xml
+++ b/app/src/main/res/layout/activity_daily_teaching.xml
@@ -23,9 +23,12 @@
                 android:layout_height="wrap_content"
                 android:text="Create Daily Catalog"
                 android:textSize="20sp"
-                android:textColor="@android:color/black"
+                android:textColor="@color/colorWhite"
                 android:layout_gravity="center"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="?android:attr/colorAccent" />
             <TextView
                 android:id="@+id/selected_date"
                 android:layout_width="match_parent"
@@ -48,17 +51,31 @@
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="horizontal"
-                android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/divider"
+                android:layout_marginTop="10dp">
                 <Spinner
-                    android:layout_marginLeft="20dp"
                     android:id="@+id/spinner"
                     android:spinnerMode="dialog"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:prompt="@string/chapter"
-                    />
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/RecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="left"
+                    android:scrollbars="vertical"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp">
+
+                </android.support.v7.widget.RecyclerView>
                 <!--<TextView-->
                     <!--android:layout_width="wrap_content"-->
                     <!--android:layout_height="wrap_content"-->
@@ -81,72 +98,65 @@
             </LinearLayout>
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="vertical"
-                android:layout_marginTop="20dp"
                 android:id="@+id/pointslinear"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp">
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:layout_weight="1"
-                    android:layout_marginLeft="5dp"
-                    android:text="Points"/>
+                    android:layout_marginLeft="20dp"
+                    android:text="Points"
+                    android:paddingRight="10dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:textColor="@color/textcolor"
+                    android:layout_marginRight="10dp"
+                    android:fontFamily="serif" />
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/my_recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:scrollbars="vertical" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical" >
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/my_recycler_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:scrollbars="vertical"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="5dp" />
+                </LinearLayout>
 
             </LinearLayout>
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="horizontal"
-                android:layout_marginTop="10dp"
                 android:weightSum="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <Button
                     android:id="@+id/buttonCreate"
-                    android:layout_width="140dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/button_shape"
-                    android:textColor="@color/textcolor"
-                    android:layout_marginTop="30dp"
+                    android:textColor="@color/colorWhite"
+                    android:layout_marginTop="20dp"
                     android:clickable="true"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginBottom="24dp"
-                    android:padding="12dp"
-                    android:text="Create"/>
-                <Button
-                    android:id="@+id/buttonCancel"
-                    android:layout_width="140dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/button_shape"
-                    android:textColor="@color/textcolor"
-                    android:layout_marginTop="30dp"
-                    android:clickable="true"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginBottom="24dp"
-                    android:padding="12dp"
-                    android:text="Cancel"/>
+                    android:layout_marginLeft="20dp"
+                    android:text="Create"
+                    android:layout_weight="0.32"
+                    android:layout_marginRight="20dp"
+                    android:background="@color/colorAccent"
+                    android:textStyle="normal|bold"
+                    android:textAllCaps="false" />
 
             </LinearLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/RecyclerView"
-        android:layout_width="320dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="left"
-        android:background="#ffffff"
-        android:scrollbars="vertical">
-
-    </android.support.v7.widget.RecyclerView>
 </android.support.v4.widget.DrawerLayout>
