--- a/app/src/main/res/layout/points_row.xml
+++ b/app/src/main/res/layout/points_row.xml
@@ -3,25 +3,32 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp">
 
     <TextView
         android:id="@+id/tvName"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="2dp"
         android:paddingRight="30dp"
         android:text="name"
         android:textColor="@color/textcolor"
-        android:textSize="15sp" />
+        android:textSize="14sp"
+        android:fontFamily="serif"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp" />
 
     <CheckBox
         android:id="@+id/chkSelected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:textSize="14sp" />
 </RelativeLayout>
 
     <!--</android.support.v7.widget.CardView>-->
