--- a/app/src/main/res/layout/activity_org.xml
+++ b/app/src/main/res/layout/activity_org.xml
@@ -43,12 +43,15 @@
             android:textSize="18sp" />
 
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/divider"
+            android:layout_marginTop="10dp">
+
 
             <TextView
                 android:layout_width="match_parent"
@@ -60,18 +63,19 @@
                 android:text="Nilesh"
                 android:textSize="18sp"
                 android:textColor="@color/textcolor"
-                android:layout_marginBottom="5dp"/>
+                android:layout_marginBottom="5dp"
+                android:layout_weight="1" />
+
             <Spinner
                 android:id="@+id/spinner"
                 android:visibility="gone"
-                android:layout_marginTop="13dp"
-                android:layout_marginBottom="5dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
                 android:spinnerMode="dialog"
                 android:prompt="@string/org"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"/>
-        </FrameLayout>
-
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </LinearLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -80,6 +84,7 @@
         android:id="@+id/passwordinput"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="8dp">
+
         <EditText android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -90,6 +95,7 @@
             android:hint="4 digit Pin"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp" />
+
     </android.support.design.widget.TextInputLayout>
 
     <Button
@@ -122,5 +128,3 @@
         android:textAlignment="center" />
 
 </LinearLayout>
-
-
