added subject image and layout set

--- a/app/src/main/res/layout-land/student_catalog.xml
+++ b/app/src/main/res/layout-land/student_catalog.xml
@@ -26,13 +26,12 @@
             android:textSize="20sp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:background="@color/colorWhite"
-            android:focusable="false" />
+            android:background="@color/colorWhite" />
 
         <android.support.v4.widget.NestedScrollView
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="420dp"
+            android:layout_height="180dp"
             android:stackFromBottom="true"
             android:transcriptMode="normal">
 
@@ -46,7 +45,7 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/my_recycler_view"
                     android:layout_width="match_parent"
-                    android:layout_height="420dp">
+                    android:layout_height="180dp">
 
                 </android.support.v7.widget.RecyclerView>
 
