--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="@color/textcolor"
-            android:hint="Email"
+            android:hint="@string/email"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp" />
@@ -47,7 +47,7 @@
             android:inputType="textPassword"
             android:textStyle="bold"
             android:textColor="@color/textcolor"
-            android:hint="Password"
+            android:hint="@string/password"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp" />
     </android.support.design.widget.TextInputLayout>
