add scrollview for landscape

--- a/app/src/main/res/layout-land/activity_pin_layout.xml
+++ b/app/src/main/res/layout-land/activity_pin_layout.xml
@@ -13,11 +13,11 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Generate mPin"
+            android:text="@string/generate_mpin"
             android:layout_gravity="center"
             android:gravity="center"
             android:textColor="?attr/colorAccent"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:textStyle="normal|bold"
             android:layout_marginBottom="5dp"
             android:paddingBottom="10dp"></TextView>
@@ -30,7 +30,7 @@
                 android:id="@+id/userpin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter Pin"
+                android:hint="@string/enter_pin"
                 android:textColor="@color/textcolor"
                 android:inputType="numberPassword"
                 android:textStyle="bold"
@@ -48,7 +48,7 @@
                 android:id="@+id/confirmuserpin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Confirm Pin"
+                android:hint="@string/confirm_pin"
                 android:textColor="@color/textcolor"
                 android:inputType="numberPassword"
                 android:textStyle="bold"
@@ -66,7 +66,7 @@
             android:layout_gravity="center"
             android:background="@color/colorAccent"
             android:clickable="true"
-            android:text="Generate mPin"
+            android:text="@string/generate_mpin"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:textStyle="normal|bold"
