--- a/app/src/main/res/layout-land/activity_pin_layout.xml
+++ b/app/src/main/res/layout-land/activity_pin_layout.xml
@@ -62,7 +62,7 @@
             android:layout_height="45dp"
             android:layout_marginTop="20dp"
             android:gravity="center"
-            android:textColor="@color/white"
+            android:textColor="@color/colorWhite"
             android:layout_gravity="center"
             android:background="@color/colorAccent"
             android:clickable="true"
