--- a/app/src/main/res/layout/activity_pin_layout.xml
+++ b/app/src/main/res/layout/activity_pin_layout.xml
@@ -74,7 +74,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:gravity="center"
-                    android:textColor="@color/white"
+                    android:textColor="@color/colorWhite"
                     android:layout_gravity="center"
                     android:background="@color/colorAccent"
                     android:clickable="true"
