--- a/app/src/main/res/layout/student_catalog.xml
+++ b/app/src/main/res/layout/student_catalog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/DrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,51 +30,49 @@
             android:background="@color/colorWhite"
             android:focusable="false" />
 
-        <android.support.v4.widget.NestedScrollView
-            android:id="@+id/scrollView"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="420dp"
-            android:stackFromBottom="true"
-            android:transcriptMode="normal">
-
+            android:layout_height="match_parent"
+            android:fillViewport="true">
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollbarFadeDuration="150"
-                android:scrollbarDefaultDelayBeforeFade="100">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/my_recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="420dp">
-
-                </android.support.v7.widget.RecyclerView>
+                android:orientation="vertical" >
 
                 <TextView
                     android:id="@+id/nodata"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:text="No Data Available"
+                    android:text="@string/no_data"
                     android:textColor="@android:color/black"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:visibility="gone"
-                    android:textStyle="normal|bold" />
+                    android:textStyle="normal|bold"
+                    android:textAllCaps="true"
+                    android:textAlignment="center" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/my_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="510dp">
+
+                </android.support.v7.widget.RecyclerView>
+
             </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
+        </ScrollView>
 
         <Button
             android:id="@+id/loadmore"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:text="Load more"
+            android:gravity="left|center"
+            android:text="@string/load_more"
             android:textColor="@color/colorWhite"
             android:textSize="18sp"
-            android:visibility="gone"
+            android:visibility="visible"
             android:textStyle="normal|bold"
             android:textAlignment="center"
             android:background="@color/colorAccent"
